[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/placaJaquis.png" type="Texture" id=1]
[ext_resource path="res://scenes/main_scene/main_scene.gd" type="Script" id=2]
[ext_resource path="res://Fonts/classic_memesbruh03.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/config.png" type="Texture" id=4]
[ext_resource path="res://assets/botao.png" type="Texture" id=5]
[ext_resource path="res://assets/BG_telaInicio.png" type="Texture" id=6]
[ext_resource path="res://assets/botao_pequeno.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 2 )

[node name="BgTelaInicio" type="Sprite" parent="."]
position = Vector2( 511.999, 300.5 )
scale = Vector2( 1.06875, 1.24792 )
texture = ExtResource( 6 )

[node name="PlacaJaquis" type="Sprite" parent="."]
position = Vector2( 476.493, 116.5 )
scale = Vector2( 0.370004, 0.408621 )
texture = ExtResource( 1 )

[node name="btn_controls" type="Button" parent="."]
margin_left = 593.0
margin_top = 371.0
margin_right = 930.0
margin_bottom = 444.0
rect_pivot_offset = Vector2( -443, -224 )
flat = true

[node name="sprt_controls" type="Sprite" parent="btn_controls"]
position = Vector2( 148, 44 )
scale = Vector2( 1.88462, 1.88462 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="btn_controls"]
margin_left = 7.0
margin_top = -1.0
margin_right = 102.0
margin_bottom = 18.0
rect_scale = Vector2( 3.5, 3.5 )
custom_fonts/font = SubResource( 3 )
text = "Controles"
align = 1
valign = 1
clip_text = true

[node name="btn_ranking" type="Button" parent="."]
margin_left = 355.0
margin_top = 478.0
margin_right = 675.0
margin_bottom = 551.0
rect_pivot_offset = Vector2( -443, -224 )
flat = true

[node name="sprt_controls" type="Sprite" parent="btn_ranking"]
position = Vector2( 131.462, 40.0001 )
scale = Vector2( 1.88462, 1.88462 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="btn_ranking"]
margin_left = -10.5381
margin_top = -5.99985
margin_right = 84.4619
margin_bottom = 13.0002
rect_scale = Vector2( 3.5, 3.5 )
custom_fonts/font = SubResource( 3 )
text = "Ranking"
align = 1
valign = 1
clip_text = true

[node name="btn_play" type="Button" parent="."]
margin_left = 55.0
margin_top = 371.0
margin_right = 387.0
margin_bottom = 438.0
rect_pivot_offset = Vector2( -443, -224 )
flat = true
clip_text = true
__meta__ = {
"_edit_group_": true
}

[node name="sprt_play" type="Sprite" parent="btn_play"]
position = Vector2( 144, 40 )
scale = Vector2( 1.88462, 1.88462 )
texture = ExtResource( 5 )

[node name="Label2" type="Label" parent="btn_play"]
margin_top = 6.0
margin_right = 95.0
margin_bottom = 20.0
rect_scale = Vector2( 3.5, 3.5 )
custom_fonts/font = SubResource( 2 )
text = "Jogar"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="btn_config" type="Button" parent="."]
margin_left = 18.0
margin_top = 11.0
margin_right = 81.0
margin_bottom = 67.0
flat = true

[node name="sprt_config" type="Sprite" parent="btn_config"]
position = Vector2( 32, 28 )
scale = Vector2( 1.4486, 1.46863 )
texture = ExtResource( 7 )

[node name="Config" type="Sprite" parent="btn_config"]
position = Vector2( 31, 28 )
scale = Vector2( 0.785714, 0.785714 )
texture = ExtResource( 4 )

[connection signal="mouse_entered" from="btn_controls" to="." method="_on_btn_controls_mouse_entered"]
[connection signal="mouse_exited" from="btn_controls" to="." method="_on_btn_controls_mouse_exited"]
[connection signal="pressed" from="btn_controls" to="." method="_on_btn_controls_pressed"]
[connection signal="mouse_entered" from="btn_ranking" to="." method="_on_btn_ranking_mouse_entered"]
[connection signal="mouse_exited" from="btn_ranking" to="." method="_on_btn_ranking_mouse_exited"]
[connection signal="pressed" from="btn_ranking" to="." method="_on_btn_ranking_pressed"]
[connection signal="mouse_entered" from="btn_play" to="." method="_on_btn_play_mouse_entered"]
[connection signal="mouse_exited" from="btn_play" to="." method="_on_btn_play_mouse_exited"]
[connection signal="pressed" from="btn_play" to="." method="_on_btn_play_pressed"]
[connection signal="mouse_entered" from="btn_config" to="." method="_on_btn_config_mouse_entered"]
[connection signal="mouse_exited" from="btn_config" to="." method="_on_btn_config_mouse_exited"]
[connection signal="pressed" from="btn_config" to="." method="_on_btn_config_pressed"]
